<resources>
    <string name="app_name">PlantCare</string>

    <!-- LOGIN & SIGN UP ACTIVITY -->
    <string name="create_your_password">Create Your Password</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login"><b>Already Registered? <u>Login</u></b></string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="not_registered_yet_sign_up"><b>Not Registered Yet? <u>Sign Up</u></b></string>
    <string name="login_attempt_limit_exceeded_please_try_again_later">Login Attempt Limit Exceeded. Please Try Again Later.</string>
    <string name="invalid_password_please_try_again">Invalid Password. Please Try Again.</string>
    <string name="invalid_email_format_please_enter_a_valid_email_address">Invalid email format. Please enter a valid email address.</string>
    <string name="email_address_is_badly_formatted">email address is badly formatted</string>
    <string name="auth_credential_is_incorrect">auth credential is incorrect</string>
    <string name="unusual_activity">unusual activity</string>
    <string name="login_failed_please_try_again_later">Login failed. Please try again later.</string>
    <string name="please_fill_all_fields">Please Fill Out All Fields</string>
    <string name="passwords_do_not_match">Passwords Do Not Match</string>
    <string name="please_enter_a_valid_email">Please Enter A Valid Email.</string>
    <string name="signup_failed_please_try_again_later">Signup failed. Please try again later.</string>

    <!-- DASHBOARD ACTIVITY -->
    <string name="greeting_message">Hello, %s</string>
    <string name="logout_confirmation_title">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="dashboard_bottom_nav">Home</string>
    <string name="add_plant_bottom_nav">Add Plant</string>
    <string name="calender_bottom_nav">Calender</string>
    <string name="reminder_bottom_nav">Reminders</string>

    <!-- ADD PLANT ACTIVITY -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="when_did_you_get_this_plant">When did you get this plant?</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="terracotta_pot">Terracotta pot?</string>
    <string name="pot_size">Pot size</string>
    <string name="start_typing_species">Start typing species...</string>
    <string name="plant_name">Plant name</string>
    <string name="select_date">Select date</string>
    <string name="add_photo">Add photo</string>
    <string name="drainage_holes">Drainage holes?</string>
    <string name="com_example_plantcare">com.example.plantcare</string>
    <string name="plant_saved_toast_message">Plant Saved!</string>
    <string name="plant_deleted_toast_message">Plant Deleted.</string>
    <string name="file_permission_error_message">Oops! Looks Like Something Went Wrong. Please Allow File Access Permissions.</string>
    <string name="position_key">position_key</string>
    <string name="plant_page_type">plant_page_type</string>
    <string name="update">Update</string>
    <string name="oops_missing_external_file_directory">Oops! Missing External File Directory</string>
    <string name="img_date_format">yyyyMMdd_HHmmss</string>
    <string name="img_name_format">image_%1$s.png</string>
    <string name="event_list_title">Watering</string>
    <string name="logout_dialog_fragment_tag">LogoutDialogFragment</string>
    <string name="edit_plant">Edit Plant</string>
    <string name="failed_to_read_value">Failed to read value.</string>
    <string name="tag">TAG</string>
    <string name="firebase_users_key">Users</string>
    <string name="error_downloading_image">Error Downloading Image: %1$s</string>
    <string name="plants_firebase_key">plants</string>
    <string name="data_prenual_key">data</string>
    <string name="common_name_prenual_key">common_name</string>
    <string name="id_prenual_key">id</string>
    <string name="get">GET</string>
    <string name="error_deleting_image_from_firebase_storage">Error deleting image from Firebase Storage: %1$s</string>
    <string name="invalid_autocomplete_position">Invalid Autocomplete Position</string>
    <string name="dob_f_string">DOB: %1$s</string>
    <string name="dd_mmm_yyyy">dd MMM yyyy</string>
    <string name="your_plants">Your Plants:</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="weak_password">Weak Password.</string>
    <string name="this_email_is_already_registered">This Email Is Already Registered</string>
    <string name="request_key_name">requestKey</string>
    <string name="bundle_key_name">bundleKey</string>

    <string-array name="pictureEntries">
        <item>Open Camera</item>
        <item>Select from Gallery</item>
    </string-array>

    <!-- PLANT INFO ACTIVITY -->
    <string name="plant_info_species">Plant Species: %1$s</string>
    <string name="plant_info_dob">\nDate Of Birth: %1$s</string>
    <string name="plant_info_watering">Watering:\n</string>
    <string name="plant_info_watering_details">\n\nBased on the provided attributes, we recommend watering %1$s every %2$d days.</string>
    <string name="plant_info_sunlight">Sunlight:\n</string>
    <string name="plant_info_pruning">Pruning:\n</string>
    <string name="complete">Complete</string>
    <string name="in_days_every__x_days">In %1$s days / Every %2$s days</string>
    <string name="plant_care_splash_screen_title">Plant Care</string>

</resources>