<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:context=".SignupActivity">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout"
      style="@style/EditTextOuter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="250dp"
      app:boxStrokeColor="@color/dark_green"
      app:hintTextColor="@color/dark_green"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_edit_text"
        style="@style/EditTextInner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/enter_password_layout"
      style="@style/EditTextOuter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="24dp"
      app:boxStrokeColor="@color/dark_green"
      app:hintTextColor="@color/dark_green"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/email_layout"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enter_password_edit_text"
        style="@style/EditTextInner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_your_password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/confirm_password_layout"
      style="@style/EditTextOuter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginTop="24dp"
      app:boxStrokeColor="@color/dark_green"
      app:hintTextColor="@color/dark_green"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/enter_password_layout"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password_edit_text"
        style="@style/EditTextInner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_your_password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/sign_up_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:background="@color/dark_green"
      android:text="@string/sign_up"
      android:textColor="@color/white"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirm_password_layout" />
  <TextView
      android:id="@+id/login_link"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/black"
      android:textSize="16sp"
      android:text="@string/already_registered_login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

</androidx.constraintlayout.widget.ConstraintLayout>